plugins {
    `java-gradle-plugin`
    kotlin("jvm")
    id("com.vanniktech.maven.publish")
}

group = "org.noear"
version = "0.0.2"
description = "Solon Gradle Plugin"

dependencies {
    compileOnly(kotlin("gradle-plugin"))
    implementation("org.ow2.asm:asm:9.5")

    testImplementation(kotlin("test"))
    testImplementation(kotlin("test-junit"))
}

tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
    kotlinOptions.jvmTarget = "1.8"
}

tasks.withType<JavaCompile> {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

gradlePlugin {
    plugins {
        create("SolonPlugin") {
            id = "org.noear.solon"
            displayName = "Solon"
            description = project.description
            implementationClass = "org.noear.solon.gradle.plugin.SolonPlugin"
        }
    }
}

mavenPublishing {
    publishToMavenCentral(com.vanniktech.maven.publish.SonatypeHost.DEFAULT)
    // or when publishing to https://s01.oss.sonatype.org
    // publishToMavenCentral(SonatypeHost.S01)

    // signAllPublications()

    coordinates(project.group.toString(), "solon-gradle-plugin", project.version.toString())

    pom {
        name.set("Solon Gradle Plugin")
        description.set(project.description)
        inceptionYear.set("2023")
        url.set("https://gitee.com/opensolon/solon")
        licenses {
            license {
                name.set("The Apache License, Version 2.0")
                url.set("https://www.apache.org/licenses/LICENSE-2.0.txt")
                distribution.set("https://www.apache.org/licenses/LICENSE-2.0.txt")
            }
        }
        developers {
            developer {
                id.set("noear")
                name.set("noear")
                url.set("https://gitee.com/opensolon")
            }
        }
        scm {
            url.set("https://gitee.com/opensolon/solon")
            connection.set("scm:git:git@gitee.com:opensolon/solon.git")
            developerConnection.set("scm:git:ssh://git@gitee.com:opensolon/solon.git")
        }
    }
}
